Add a way to reorder elements  (#19)
* Add a way to reorder elements. I think it works sort of by mistake. 
* Add JDBC logging in dev profile
